--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,10 @@
 .input-box{
   border-width: 0px;
   height: 50px;
-  font-size: 50px;
+  font-size: 43px;
   text-align: center;
+}
+
+.results{
+  font-size: 25px;
 }
