--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,5 @@
 <input type="text" [(ngModel)]="results" [hidden]="false" placeholder="Enter values here..." class='input-box' />
 <br>
 
-<p class="results">{{addition(results)}}</p>
+<p class="results">{{calculation(results)}}</p>
 </div>
