--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,10 +4,14 @@
 
 .input-box{
   border-width: 0px;
-  height: 50px;
-  font-size: 43px;
+  height: 27px;
+  font-size: 16px;
   text-align: center;
   font-family: 'Rajdhani', Arial, sans-serif;
+  background: #f7f7f7;
+  margin: -243px -14px 0px -81px;
+  z-index: 3;
+  position: absolute;
 }
 
 .results{
