--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,11 @@
 <p class="results">{{calculation(results)}}</p>
 
 <button (click)="getTithe(results);">Calculate Tithe</button>
-<button (click)="getHTTP();">Get HTTP Data</button>
+<a routerLink="/help"
+    RouterLinkActive="active">Help Center</a>
 
 <p *ngIf="myTithe">Tithe: {{myTithe}}</p>
 
-<h1>{{httpData}}</h1>
-
 </div>
+
+<router-outlet></router-outlet>
